# micrograd

./: README.md  main.py  micrograd.py  nn.py  pyproject.toml
src/: examples.py  micrograd.py  nn.py
tests/: test_micrograd.py  test_nn.py
