[project]
name = "micrograd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "tqdm>=4.67.3",
    "ty>=0.0.32",
]

[tool.basedpyright]
reportUnknownMemberType = "none"
